otp system implemented but not which user to allow permission to get otp

--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,9 @@ name = "pypi"
 [packages]
 django = "*"
 djangorestframework = "*"
-environ = "*"
 django-filter = "*"
+django-environ = "*"
+certifi = "*"
 
 [dev-packages]
 
