--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.5.1",
     "global": "^4.4.0",
     "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
