--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^20.8.9",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
+    "framer-motion": "^10.16.4",
     "global": "^4.4.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
